--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1804,6 +1804,9 @@ video {
 .h-\[94px\] {
   height: 94px;
 }
+.h-\[259px\] {
+  height: 259px;
+}
 .max-h-60 {
   max-height: 15rem;
 }
@@ -2514,6 +2517,9 @@ video {
 .grid-rows-\[auto_auto_auto\] {
   grid-template-rows: auto auto auto;
 }
+.grid-rows-\[auto_minmax\(60px\2c auto\)_1fr_auto\] {
+  grid-template-rows: auto minmax(60px,auto) 1fr auto;
+}
 .flex-row {
   flex-direction: row;
 }
@@ -2914,8 +2920,19 @@ video {
 .bg-transparent {
   background-color: transparent;
 }
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
 .bg-contain {
   background-size: contain;
+}
+.bg-cover {
+  background-size: cover;
 }
 .bg-center {
   background-position: center;
@@ -3870,6 +3887,9 @@ video {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.delay-500 {
+  transition-delay: 500ms;
 }
 .duration-200 {
   transition-duration: 200ms;
