--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1287,6 +1287,15 @@ video {
 .left-\[0\] {
   left: 0;
 }
+.left-\[-10\%\] {
+  left: -10%;
+}
+.top-\[-470px\] {
+  top: -470px;
+}
+.left-\[62\%\] {
+  left: 62%;
+}
 .z-2 {
   z-index: 2;
 }
@@ -2010,6 +2019,9 @@ video {
 }
 .w-\[21px\] {
   width: 21px;
+}
+.w-\[500px\] {
+  width: 500px;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -4908,6 +4920,15 @@ video {
   .tablet\:left-\[40\%\] {
     left: 40%;
   }
+  .tablet\:left-\[-4\%\] {
+    left: -4%;
+  }
+  .tablet\:top-\[-820px\] {
+    top: -820px;
+  }
+  .tablet\:left-\[62\%\] {
+    left: 62%;
+  }
   .tablet\:z-20 {
     z-index: 20;
   }
@@ -5303,6 +5324,9 @@ video {
   .tablet\:w-\[410px\] {
     width: 410px;
   }
+  .tablet\:w-\[1030px\] {
+    width: 1030px;
+  }
   .tablet\:min-w-\[753px\] {
     min-width: 753px;
   }
@@ -5460,6 +5484,10 @@ video {
   }
   .tablet\:rotate-\[-44deg\] {
     --tw-rotate: -44deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .tablet\:rotate-45 {
+    --tw-rotate: 45deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .tablet\:scale-\[-1\] {
@@ -5923,6 +5951,18 @@ video {
   .laptop\:top-\[-600px\] {
     top: -600px;
   }
+  .laptop\:top-\[-1370px\] {
+    top: -1370px;
+  }
+  .laptop\:top-\[-860px\] {
+    top: -860px;
+  }
+  .laptop\:left-\[6\%\] {
+    left: 6%;
+  }
+  .laptop\:left-\[57\%\] {
+    left: 57%;
+  }
   .laptop\:z-0 {
     z-index: 0;
   }
@@ -6259,6 +6299,9 @@ video {
   }
   .laptop\:w-\[770px\] {
     width: 770px;
+  }
+  .laptop\:w-\[1050px\] {
+    width: 1050px;
   }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
@@ -6840,6 +6883,18 @@ video {
   .desktop\:top-\[-770px\] {
     top: -770px;
   }
+  .desktop\:left-\[120px\] {
+    left: 120px;
+  }
+  .desktop\:top-\[-1370px\] {
+    top: -1370px;
+  }
+  .desktop\:left-\[22\%\] {
+    left: 22%;
+  }
+  .desktop\:left-\[57\%\] {
+    left: 57%;
+  }
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
@@ -7140,6 +7195,9 @@ video {
   .desktop\:w-\[1020px\] {
     width: 1020px;
   }
+  .desktop\:w-\[1620px\] {
+    width: 1620px;
+  }
   .desktop\:min-w-\[1265px\] {
     min-width: 1265px;
   }
@@ -7229,6 +7287,10 @@ video {
   }
   .desktop\:rotate-\[130deg\] {
     --tw-rotate: 130deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .desktop\:rotate-45 {
+    --tw-rotate: 45deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .desktop\:grid-cols-desktop {
@@ -7415,6 +7477,9 @@ video {
   }
   .desktopXl\:top-\[100px\] {
     top: 100px;
+  }
+  .desktopXl\:left-\[54\%\] {
+    left: 54%;
   }
   .desktopXl\:col-span-12 {
     grid-column: span 12 / span 12;
