--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -480,6 +480,11 @@ video {
     max-width: 1536px;
   }
 }
+@media (min-width: 1880px) {
+  .container {
+    max-width: 1880px;
+  }
+}
 .btn {
   display: flex;
   flex: 1 1 0%;
@@ -1030,6 +1035,9 @@ video {
 .left-\[-50px\] {
   left: -50px;
 }
+.right-0 {
+  right: 0px;
+}
 .top-\[-110px\] {
   top: -110px;
 }
@@ -1104,9 +1112,6 @@ video {
 }
 .right-auto {
   right: auto;
-}
-.right-0 {
-  right: 0px;
 }
 .top-\[-4\%\] {
   top: -4%;
@@ -1272,6 +1277,18 @@ video {
 }
 .left-\[300px\] {
   left: 300px;
+}
+.right-\[-25px\] {
+  right: -25px;
+}
+.top-\[-55px\] {
+  top: -55px;
+}
+.top-\[-225px\] {
+  top: -225px;
+}
+.right-\[-260px\] {
+  right: -260px;
 }
 .z-2 {
   z-index: 2;
@@ -1996,6 +2013,12 @@ video {
 }
 .w-\[98\.34px\] {
   width: 98.34px;
+}
+.w-\[400px\] {
+  width: 400px;
+}
+.w-\[200px\] {
+  width: 200px;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -2829,9 +2852,8 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
-.bg-teal-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+.bg-transparent {
+  background-color: transparent;
 }
 .bg-sage-700 {
   background-color: var(--sage-700);
@@ -2882,9 +2904,6 @@ video {
 .bg-success-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 113 113 / var(--tw-bg-opacity));
-}
-.bg-transparent {
-  background-color: transparent;
 }
 .bg-contain {
   background-size: contain;
@@ -3397,10 +3416,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(62 62 62 / var(--tw-text-opacity));
 }
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
 .text-grey-700 {
   --tw-text-opacity: 1;
   color: rgb(56 64 80 / var(--tw-text-opacity));
@@ -3527,6 +3542,10 @@ video {
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .text-charcoal-900 {
   --tw-text-opacity: 1;
@@ -4827,6 +4846,15 @@ video {
   .tablet\:top-\[-40px\] {
     top: -40px;
   }
+  .tablet\:top-\[-155px\] {
+    top: -155px;
+  }
+  .tablet\:right-\[-230px\] {
+    right: -230px;
+  }
+  .tablet\:left-\[-160px\] {
+    left: -160px;
+  }
   .tablet\:z-20 {
     z-index: 20;
   }
@@ -5182,6 +5210,9 @@ video {
   }
   .tablet\:w-\[180px\] {
     width: 180px;
+  }
+  .tablet\:w-\[200px\] {
+    width: 200px;
   }
   .tablet\:min-w-\[753px\] {
     min-width: 753px;
@@ -6147,6 +6178,9 @@ video {
   .laptop\:max-w-\[90\%\] {
     max-width: 90%;
   }
+  .laptop\:max-w-\[837px\] {
+    max-width: 837px;
+  }
   .laptop\:max-w-\[180px\] {
     max-width: 180px;
   }
@@ -6657,6 +6691,9 @@ video {
   .desktop\:top-\[170px\] {
     top: 170px;
   }
+  .desktop\:left-\[20px\] {
+    left: 20px;
+  }
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
@@ -6666,11 +6703,11 @@ video {
   .desktop\:col-span-full {
     grid-column: 1 / -1;
   }
-  .desktop\:col-span-7 {
-    grid-column: span 7 / span 7;
-  }
   .desktop\:col-span-6 {
     grid-column: span 6 / span 6;
+  }
+  .desktop\:col-span-7 {
+    grid-column: span 7 / span 7;
   }
   .desktop\:col-span-4 {
     grid-column: span 4 / span 4;
@@ -6690,6 +6727,9 @@ video {
   .desktop\:col-start-8 {
     grid-column-start: 8;
   }
+  .desktop\:col-start-5 {
+    grid-column-start: 5;
+  }
   .desktop\:col-start-7 {
     grid-column-start: 7;
   }
@@ -6698,9 +6738,6 @@ video {
   }
   .desktop\:col-start-9 {
     grid-column-start: 9;
-  }
-  .desktop\:col-start-5 {
-    grid-column-start: 5;
   }
   .desktop\:col-start-1 {
     grid-column-start: 1;
@@ -7182,6 +7219,12 @@ video {
   .desktopXl\:top-\[100px\] {
     top: 100px;
   }
+  .desktopXl\:right-\[-395px\] {
+    right: -395px;
+  }
+  .desktopXl\:top-\[-28\%\] {
+    top: -28%;
+  }
   .desktopXl\:col-span-12 {
     grid-column: span 12 / span 12;
   }
@@ -7203,17 +7246,23 @@ video {
   .desktopXl\:col-start-8 {
     grid-column-start: 8;
   }
-  .desktopXl\:col-start-6 {
-    grid-column-start: 6;
-  }
   .desktopXl\:col-start-4 {
     grid-column-start: 4;
+  }
+  .desktopXl\:col-start-6 {
+    grid-column-start: 6;
   }
   .desktopXl\:ml-60 {
     margin-left: 15rem;
   }
   .desktopXl\:mr-\[40\%\] {
     margin-right: 40%;
+  }
+  .desktopXl\:w-\[400px\] {
+    width: 400px;
+  }
+  .desktopXl\:w-\[300px\] {
+    width: 300px;
   }
   .desktopXl\:max-w-\[1180px\] {
     max-width: 1180px;
@@ -7234,6 +7283,20 @@ video {
   }
   .desktopXl\:text-\[80px\] {
     font-size: 80px;
+  }
+}
+@media (min-width: 1880px) {
+  .desktopMax\:top-\[-6\%\] {
+    top: -6%;
+  }
+  .desktopMax\:right-\[-365px\] {
+    right: -365px;
+  }
+  .desktopMax\:col-span-10 {
+    grid-column: span 10 / span 10;
+  }
+  .desktopMax\:col-start-3 {
+    grid-column-start: 3;
   }
 }
 .blog-content a {
