--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1423,10 +1423,6 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -1471,6 +1467,10 @@ video {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -1495,12 +1495,6 @@ video {
   margin-left: 10px;
   margin-right: 10px;
 }
-.mb-8 {
-  margin-bottom: 2rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
-}
 .mt-8 {
   margin-top: 2rem;
 }
@@ -1509,6 +1503,12 @@ video {
 }
 .mb-16 {
   margin-bottom: 4rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -2014,9 +2014,6 @@ video {
 .min-w-\[320px\] {
   min-width: 320px;
 }
-.max-w-\[210px\] {
-  max-width: 210px;
-}
 .max-w-\[548px\] {
   max-width: 548px;
 }
@@ -2146,6 +2143,9 @@ video {
 .max-w-\[28px\] {
   max-width: 28px;
 }
+.max-w-\[210px\] {
+  max-width: 210px;
+}
 .max-w-\[1450px\] {
   max-width: 1450px;
 }
@@ -2218,9 +2218,6 @@ video {
 .max-w-\[220px\] {
   max-width: 220px;
 }
-.flex-1 {
-  flex: 1 1 0%;
-}
 .flex-\[0_1_50\%\] {
   flex: 0 1 50%;
 }
@@ -2241,6 +2238,9 @@ video {
 }
 .flex-initial {
   flex: 0 1 auto;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
@@ -2285,10 +2285,6 @@ video {
 }
 .translate-y-1 {
   --tw-translate-y: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-\[-4deg\] {
-  --tw-rotate: -4deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-\[352deg\] {
@@ -2361,6 +2357,10 @@ video {
 }
 .rotate-6 {
   --tw-rotate: 6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-\[-4deg\] {
+  --tw-rotate: -4deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-rotate-12 {
@@ -2692,10 +2692,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(143 177 177 / var(--tw-border-opacity));
 }
-.bg-cream-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 246 247 / var(--tw-bg-opacity));
-}
 .bg-primary-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(240 227 220 / var(--tw-bg-opacity));
@@ -2828,6 +2824,10 @@ video {
 .bg-success-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 229 229 / var(--tw-bg-opacity));
+}
+.bg-cream-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 246 247 / var(--tw-bg-opacity));
 }
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
@@ -3186,8 +3186,8 @@ video {
 .pb-\[18\%\] {
   padding-bottom: 18%;
 }
-.pt-\[68px\] {
-  padding-top: 68px;
+.pt-\[var\(--nav-top-sm\)\] {
+  padding-top: var(--nav-top-sm);
 }
 .pb-10 {
   padding-bottom: 2.5rem;
@@ -3218,6 +3218,9 @@ video {
 }
 .pb-16 {
   padding-bottom: 4rem;
+}
+.pt-\[68px\] {
+  padding-top: 68px;
 }
 .pl-3 {
   padding-left: 0.75rem;
@@ -3261,18 +3264,6 @@ video {
 .font-sentinel__Book {
   font-family: Sentinel Book, serif;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
@@ -3283,6 +3274,10 @@ video {
 }
 .text-xl {
   font-size: 1.25rem;
+  line-height: 2rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
   line-height: 2rem;
 }
 .text-5xl {
@@ -3305,9 +3300,17 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-h4 {
   font-size: 1.75rem;
@@ -3394,14 +3397,6 @@ video {
 }
 .tracking-wide {
   letter-spacing: 0.025em;
-}
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-primary-400 {
-  --tw-text-opacity: 1;
-  color: rgb(159 98 98 / var(--tw-text-opacity));
 }
 .text-\[\#3E3E3E\] {
   --tw-text-opacity: 1;
@@ -3494,9 +3489,17 @@ video {
   --tw-text-opacity: 1;
   color: rgb(64 71 100 / var(--tw-text-opacity));
 }
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
 .text-lfm-blue-700 {
   --tw-text-opacity: 1;
   color: rgb(53 84 109 / var(--tw-text-opacity));
+}
+.text-primary-400 {
+  --tw-text-opacity: 1;
+  color: rgb(159 98 98 / var(--tw-text-opacity));
 }
 .text-lfm-pink-400 {
   --tw-text-opacity: 1;
@@ -4989,15 +4992,6 @@ video {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-  .tablet\:mr-2 {
-    margin-right: 0.5rem;
-  }
-  .tablet\:ml-5 {
-    margin-left: 1.25rem;
-  }
-  .tablet\:mb-0 {
-    margin-bottom: 0px;
-  }
   .tablet\:mb-6 {
     margin-bottom: 1.5rem;
   }
@@ -5006,6 +5000,9 @@ video {
   }
   .tablet\:mb-8 {
     margin-bottom: 2rem;
+  }
+  .tablet\:mr-2 {
+    margin-right: 0.5rem;
   }
   .tablet\:mt-0 {
     margin-top: 0px;
@@ -5031,6 +5028,9 @@ video {
   .tablet\:mb-16 {
     margin-bottom: 4rem;
   }
+  .tablet\:mb-0 {
+    margin-bottom: 0px;
+  }
   .tablet\:mr-4 {
     margin-right: 1rem;
   }
@@ -5054,6 +5054,9 @@ video {
   }
   .tablet\:mb-9 {
     margin-bottom: 2.25rem;
+  }
+  .tablet\:ml-5 {
+    margin-left: 1.25rem;
   }
   .tablet\:mt-10 {
     margin-top: 2.5rem;
@@ -5202,12 +5205,6 @@ video {
   .tablet\:min-w-\[753px\] {
     min-width: 753px;
   }
-  .tablet\:max-w-\[300px\] {
-    max-width: 300px;
-  }
-  .tablet\:max-w-\[250px\] {
-    max-width: 250px;
-  }
   .tablet\:max-w-\[564px\] {
     max-width: 564px;
   }
@@ -5246,6 +5243,12 @@ video {
   }
   .tablet\:max-w-\[260px\] {
     max-width: 260px;
+  }
+  .tablet\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+  .tablet\:max-w-\[250px\] {
+    max-width: 250px;
   }
   .tablet\:max-w-\[678px\] {
     max-width: 678px;
@@ -5561,10 +5564,6 @@ video {
   .tablet\:text-right {
     text-align: right;
   }
-  .tablet\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
   .tablet\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -5584,6 +5583,10 @@ video {
   .tablet\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+  .tablet\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
   .tablet\:text-lg {
     font-size: 1.125rem;
@@ -5802,17 +5805,17 @@ video {
   .laptop\:z-0 {
     z-index: 0;
   }
-  .laptop\:col-span-10 {
-    grid-column: span 10 / span 10;
-  }
-  .laptop\:col-span-8 {
-    grid-column: span 8 / span 8;
-  }
   .laptop\:col-span-11 {
     grid-column: span 11 / span 11;
   }
+  .laptop\:col-span-10 {
+    grid-column: span 10 / span 10;
+  }
   .laptop\:col-span-6 {
     grid-column: span 6 / span 6;
+  }
+  .laptop\:col-span-8 {
+    grid-column: span 8 / span 8;
   }
   .laptop\:col-span-9 {
     grid-column: span 9 / span 9;
@@ -5832,11 +5835,11 @@ video {
   .laptop\:col-start-3 {
     grid-column-start: 3;
   }
-  .laptop\:col-start-4 {
-    grid-column-start: 4;
-  }
   .laptop\:col-start-5 {
     grid-column-start: 5;
+  }
+  .laptop\:col-start-4 {
+    grid-column-start: 4;
   }
   .laptop\:col-start-1 {
     grid-column-start: 1;
@@ -5944,9 +5947,9 @@ video {
     margin-left: 0px;
     margin-right: 0px;
   }
-  .laptop\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+  .laptop\:my-\[10px\] {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   .laptop\:mx-\[40px\] {
     margin-left: 40px;
@@ -5955,15 +5958,6 @@ video {
   .laptop\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
-  }
-  .laptop\:mb-16 {
-    margin-bottom: 4rem;
-  }
-  .laptop\:ml-20 {
-    margin-left: 5rem;
-  }
-  .laptop\:mr-8 {
-    margin-right: 2rem;
   }
   .laptop\:mt-0 {
     margin-top: 0px;
@@ -5995,6 +5989,9 @@ video {
   .laptop\:mb-0 {
     margin-bottom: 0px;
   }
+  .laptop\:mb-16 {
+    margin-bottom: 4rem;
+  }
   .laptop\:mr-0 {
     margin-right: 0px;
   }
@@ -6021,6 +6018,12 @@ video {
   }
   .laptop\:mb-20 {
     margin-bottom: 5rem;
+  }
+  .laptop\:ml-20 {
+    margin-left: 5rem;
+  }
+  .laptop\:mr-8 {
+    margin-right: 2rem;
   }
   .laptop\:ml-\[25px\] {
     margin-left: 25px;
@@ -6136,15 +6139,6 @@ video {
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
   }
-  .laptop\:max-w-\[257px\] {
-    max-width: 257px;
-  }
-  .laptop\:max-w-\[644px\] {
-    max-width: 644px;
-  }
-  .laptop\:max-w-\[410px\] {
-    max-width: 410px;
-  }
   .laptop\:max-w-\[490px\] {
     max-width: 490px;
   }
@@ -6166,8 +6160,14 @@ video {
   .laptop\:max-w-\[837px\] {
     max-width: 837px;
   }
+  .laptop\:max-w-\[410px\] {
+    max-width: 410px;
+  }
   .laptop\:max-w-\[180px\] {
     max-width: 180px;
+  }
+  .laptop\:max-w-\[257px\] {
+    max-width: 257px;
   }
   .laptop\:max-w-\[288px\] {
     max-width: 288px;
@@ -6183,6 +6183,9 @@ video {
   }
   .laptop\:max-w-\[355px\] {
     max-width: 355px;
+  }
+  .laptop\:max-w-\[644px\] {
+    max-width: 644px;
   }
   .laptop\:max-w-\[375px\] {
     max-width: 375px;
@@ -6235,11 +6238,11 @@ video {
   .laptop\:max-w-\[1440px\] {
     max-width: 1440px;
   }
-  .laptop\:flex-\[2\] {
-    flex: 2;
-  }
   .laptop\:flex-\[0_1_50\%\] {
     flex: 0 1 50%;
+  }
+  .laptop\:flex-\[2\] {
+    flex: 2;
   }
   .laptop\:flex-\[1\.25\] {
     flex: 1.25;
@@ -6411,8 +6414,8 @@ video {
   .laptop\:pb-0 {
     padding-bottom: 0px;
   }
-  .laptop\:pt-\[96px\] {
-    padding-top: 96px;
+  .laptop\:pt-\[var\(--nav-top-lg\)\] {
+    padding-top: var(--nav-top-lg);
   }
   .laptop\:pl-0 {
     padding-left: 0px;
@@ -6441,6 +6444,9 @@ video {
   .laptop\:pt-0 {
     padding-top: 0px;
   }
+  .laptop\:pt-\[96px\] {
+    padding-top: 96px;
+  }
   .laptop\:pr-20 {
     padding-right: 5rem;
   }
@@ -6449,10 +6455,6 @@ video {
   }
   .laptop\:text-left {
     text-align: left;
-  }
-  .laptop\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
   .laptop\:text-8xl {
     font-size: 6rem;
@@ -6492,6 +6494,10 @@ video {
   .laptop\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+  .laptop\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
   .laptop\:text-\[56px\] {
     font-size: 56px;
@@ -6676,11 +6682,11 @@ video {
   .desktop\:top-\[170px\] {
     top: 170px;
   }
-  .desktop\:col-span-8 {
-    grid-column: span 8 / span 8;
-  }
   .desktop\:col-span-5 {
     grid-column: span 5 / span 5;
+  }
+  .desktop\:col-span-8 {
+    grid-column: span 8 / span 8;
   }
   .desktop\:col-span-full {
     grid-column: 1 / -1;
@@ -6700,14 +6706,14 @@ video {
   .desktop\:col-span-9 {
     grid-column: span 9 / span 9;
   }
-  .desktop\:col-start-4 {
-    grid-column-start: 4;
-  }
   .desktop\:col-start-2 {
     grid-column-start: 2;
   }
   .desktop\:col-start-8 {
     grid-column-start: 8;
+  }
+  .desktop\:col-start-4 {
+    grid-column-start: 4;
   }
   .desktop\:col-start-5 {
     grid-column-start: 5;
@@ -6748,10 +6754,6 @@ video {
   .desktop\:m-\[20px_0_5px_70px\] {
     margin: 20px 0 5px 70px;
   }
-  .desktop\:mx-16 {
-    margin-left: 4rem;
-    margin-right: 4rem;
-  }
   .desktop\:mx-10 {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
@@ -6776,6 +6778,10 @@ video {
     margin-left: 3rem;
     margin-right: 3rem;
   }
+  .desktop\:mx-16 {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
   .desktop\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -6784,11 +6790,11 @@ video {
     margin-top: 8rem;
     margin-bottom: 8rem;
   }
-  .desktop\:ml-16 {
-    margin-left: 4rem;
-  }
   .desktop\:mt-\[-60px\] {
     margin-top: -60px;
+  }
+  .desktop\:ml-16 {
+    margin-left: 4rem;
   }
   .desktop\:mt-24 {
     margin-top: 6rem;
@@ -6952,9 +6958,6 @@ video {
   .desktop\:min-w-\[1265px\] {
     min-width: 1265px;
   }
-  .desktop\:max-w-\[410px\] {
-    max-width: 410px;
-  }
   .desktop\:max-w-\[550px\] {
     max-width: 550px;
   }
@@ -6991,8 +6994,8 @@ video {
   .desktop\:max-w-\[545px\] {
     max-width: 545px;
   }
-  .desktop\:max-w-\[220px\] {
-    max-width: 220px;
+  .desktop\:max-w-\[410px\] {
+    max-width: 410px;
   }
   .desktop\:max-w-\[1180px\] {
     max-width: 1180px;
@@ -7122,14 +7125,6 @@ video {
   .desktop\:pb-32 {
     padding-bottom: 8rem;
   }
-  .desktop\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
-  .desktop\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
   .desktop\:text-9xl {
     font-size: 8rem;
     line-height: 1;
@@ -7150,6 +7145,10 @@ video {
     font-size: 1.5rem;
     line-height: 2rem;
   }
+  .desktop\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
   .desktop\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -7157,6 +7156,10 @@ video {
   .desktop\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+  .desktop\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
   .desktop\:text-\[67px\] {
     font-size: 67px;
@@ -7207,9 +7210,6 @@ video {
   .desktopXl\:top-\[100px\] {
     top: 100px;
   }
-  .desktopXl\:col-span-12 {
-    grid-column: span 12 / span 12;
-  }
   .desktopXl\:col-span-4 {
     grid-column: span 4 / span 4;
   }
@@ -7219,8 +7219,8 @@ video {
   .desktopXl\:col-span-8 {
     grid-column: span 8 / span 8;
   }
-  .desktopXl\:col-start-2 {
-    grid-column-start: 2;
+  .desktopXl\:col-span-12 {
+    grid-column: span 12 / span 12;
   }
   .desktopXl\:col-start-3 {
     grid-column-start: 3;
@@ -7233,6 +7233,9 @@ video {
   }
   .desktopXl\:col-start-6 {
     grid-column-start: 6;
+  }
+  .desktopXl\:col-start-2 {
+    grid-column-start: 2;
   }
   .desktopXl\:ml-60 {
     margin-left: 15rem;
@@ -7755,6 +7758,8 @@ video {
   --grey-700: #384050;
   --grey-800: #212837;
   --lfm-pink-200: #fae7e7;
+  --nav-top-sm: 68px;
+  --nav-top-lg: 76px;
 }
 @font-face {
   font-family: "Sentinel Book";
